--- a/public/index.html
+++ b/public/index.html
@@ -20,60 +20,65 @@
               id="full-name"
               placeholder="Name..."
               tabindex="1"
+              autocomplete="off"
               required
-            />
-          </div>
-          <div id="email-block" class="input-label-block">
-            <label for="email">Email</label>
+              />
+            </div>
+            <div id="email-block" class="input-label-block">
+              <label for="email">Email</label>
             <input
               type="email"
               name="email"
               id="email"
               placeholder="Email..."
+              autocomplete="off"
               tabindex="2"
               required
-            />
-          </div>
-          <div id="username-block" class="input-label-block">
-            <label for="username">Username</label>
-            <input
+              />
+            </div>
+            <div id="username-block" class="input-label-block">
+              <label for="username">Username</label>
+              <input
               type="text"
               name="username"
               id="username"
               placeholder="Username..."
+              autocomplete="off"
               tabindex="3"
               required
-            />
-          </div>
+              />
+            </div>
           <div id="password-block" class="input-label-block">
             <label for="password">Password</label>
             <input
-              type="password"
-              name="password"
-              id="password"
-              placeholder="***********"
-              tabindex="4"
-              required
+            type="password"
+            name="password"
+            id="password"
+            placeholder="***********"
+            autocomplete="off"
+            tabindex="4"
+            required
             />
           </div>
           <div id="repeat-password-block" class="input-label-block">
             <label for="repeat-password">Repeat Password</label>
             <input
-              type="password"
-              name="repeat-password"
-              id="repeat-password"
-              placeholder="***********"
-              tabindex="5"
-              required
+            type="password"
+            name="repeat-password"
+            id="repeat-password"
+            placeholder="***********"
+            autocomplete="off"
+            tabindex="5"
+            required
             />
           </div>
           <div id="user-agreement-block">
             <input
-              type="checkbox"
-              id="user-agreement"
-              name="user-agreement"
-              tabindex="6"
-              required
+            type="checkbox"
+            id="user-agreement"
+            name="user-agreement"
+            tabindex="6"
+            required
             />
             <label for="user-agreement"
               >I agree to
