--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Sign Up</title>
   </head>
   <body>
+    <div id="root"></div>
     <main>
       <div id="cover"></div>
       <div id="form-block">
